--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/textTitle"
+        android:id="@+id/text_Title"
         android:layout_gravity="center_horizontal"
         android:layout_alignTop="@+id/imageView"
         android:layout_toRightOf="@+id/imageView"
@@ -26,8 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/textDescription"
-        android:layout_below="@+id/textTitle"
+        android:id="@+id/text_Description"
+        android:layout_below="@+id/text_Title"
         android:layout_toRightOf="@+id/imageView"
         android:layout_toEndOf="@+id/imageView" />
 
