--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
     android:orientation="vertical"
     android:contentDescription="@string/imgDescription">
+
 
     <ImageView
         android:layout_width="120dp"
@@ -16,20 +16,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/text_Title"
+        android:id="@+id/textVideoTitle"
         android:layout_gravity="center_horizontal"
         android:layout_alignTop="@+id/imageView"
         android:layout_toRightOf="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_toEndOf="@+id/imageView"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/text_Description"
-        android:layout_below="@+id/text_Title"
+        android:id="@+id/textVideoDescription"
+        android:layout_below="@+id/textVideoTitle"
         android:layout_toRightOf="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_toEndOf="@+id/imageView"/>
 
+    <Space
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:padding="5dp"/>
 
 </RelativeLayout>
