--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -4,10 +4,15 @@
     android:layout_height="match_parent"
     tools:context="com.example.ultrabook.rhinotube.VideoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <ListView
         android:id="@+id/list_video"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    </android.support.v4.widget.SwipeRefreshLayout>
 </FrameLayout>
