--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -6,11 +6,9 @@
     android:orientation="vertical"
     tools:context="com.example.ultrabook.rhinotube.VideoActivity">
 
-    <fragment
-        android:id="@+id/fragment_video"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1."
-        android:name="com.example.ultrabook.rhinotube.VideoFragment" />
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
