--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -10,7 +10,8 @@
         android:layout_width="120dp"
         android:layout_height="90dp"
         android:id="@+id/imageView"
-        android:contentDescription="@string/imgDescription"/>
+        android:contentDescription="@string/imgDescription"
+        android:layout_centerVertical="true"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,6 +21,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_alignTop="@+id/imageView"
         android:layout_toRightOf="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView"/>
+        android:layout_toEndOf="@+id/imageView"
+        android:layout_marginLeft="3dp"/>
 
 </RelativeLayout>
