--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -5,7 +5,6 @@
     android:orientation="vertical"
     android:contentDescription="@string/imgDescription">
 
-
     <ImageView
         android:layout_width="120dp"
         android:layout_height="90dp"
@@ -22,6 +21,7 @@
         android:layout_alignTop="@+id/imageView"
         android:layout_toRightOf="@+id/imageView"
         android:layout_toEndOf="@+id/imageView"
-        android:layout_marginLeft="3dp"/>
+        android:layout_marginLeft="3dp"
+        android:layout_marginStart="3dp"/>
 
 </RelativeLayout>
