--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -6,11 +6,23 @@
     android:orientation="vertical"
     tools:context="com.example.ultrabook.rhinotube.VideoActivity">
 
-    <!-- Abas everywhere -->
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout"
+    <!--Usado para poder substituir a barra convencional-->
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+
+        <!--ToolBar usada para acoplar o TabLayout junto ao menu do topo-->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolBar"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"/>
+
+        <!--Usado para dar aopio as trânsições das abas-->
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </android.support.design.widget.AppBarLayout>
 
     <!-- ViewPager que vai conter os dois fragmens -->
     <android.support.v4.view.ViewPager
