--- a/app/src/main/res/menu/menu_video.xml
+++ b/app/src/main/res/menu/menu_video.xml
@@ -2,8 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:andrid="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/favorite"
-        android:icon="@drawable/ic_add"
+        android:id="@+id/favorite_icon"
         android:title="@string/addFavorite"
         android:orderInCategory="100"
         andrid:showAsAction="always"/>
