--- a/app/src/main/res/menu/menu_video.xml
+++ b/app/src/main/res/menu/menu_video.xml
@@ -3,7 +3,7 @@
     xmlns:andrid="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/favorite_icon"
-        android:title="@string/addFavorite"
+        android:title="@string/favorite"
         android:orderInCategory="100"
         andrid:showAsAction="always"/>
 
