--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     tools:context="com.example.ultrabook.rhinotube.VideoFragment">
 
+    <include layout="@layout/empty_list"/>
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe"
         android:layout_width="match_parent"
@@ -16,3 +18,4 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 </FrameLayout>
+
