--- a/app/src/main/res/menu/menu_video.xml
+++ b/app/src/main/res/menu/menu_video.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:andrid="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/favorite_icon"
         android:title="@string/favorite"
         android:orderInCategory="100"
-        andrid:showAsAction="always"/>
+        app:showAsAction="always"/>
 
 </menu>
