--- a/app/src/main/res/layout-sw600dp/activity_video.xml
+++ b/app/src/main/res/layout-sw600dp/activity_video.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.ultrabook.rhinotube.VideoActivity"
-    android:divider="?android:attr/dividerHorizontal">
-
+    android:divider="?android:attr/dividerVertical">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
